--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
 
   <title>Frontend Mentor | Product preview card component</title>
 </head>
@@ -24,7 +24,7 @@
         <span>$169.99</span>
       </div>
 
-      <button><img src="/images/icon-cart.svg" alt=""> Add to Cart</button>
+      <button><img src="./images/icon-cart.svg" alt=""> Add to Cart</button>
     </div>
   </main>
 
